bug subscriber toList immutable